# poi

./: Cargo.toml  LICENSE-MIT  README.md
assets/: help-asym.txt  help-d.txt  help-deriv.txt  help-dom.txt  help-eqv.txt  help-ex.txt  help-goal.txt  help-imag.txt  help-integ.txt  help-norm.txt  help-symbol.txt  help-triv.txt  help.txt  std.md  syntax.txt
assets/help/: asym.txt  catus.txt  dom.txt  eps.txt  eqv.txt  goal.txt  help.txt  list.txt  norm.txt  rad.txt  script.txt  sym.txt
examples/: and.rs  asymmetric_paths.rs  binary.rs  binary_paths.rs  display.rs  echo.rs  not_not.rs  or.rs  parsing.rs  poi.rs  poireduce.rs
source/: and_false.txt  and_not.txt  and_true.txt  or_not.txt  rot.poi  rot3_x.poi  rot3_y.poi  rot3_z.poi  trans4.poi
source/collatz/: script.poi
source/lagrangian/: spring.poi  spring_goal.poi  spring_motion.poi
src/: arity.rs  expr.rs  knowledge.rs  lib.rs  matrix.rs  op.rs  parsing.rs  standard_library.rs  sym.rs  val.rs
