[package]
name = "poi"
version = "0.8.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
edition = "2018"
keywords = ["advancedresearch", "theorem", "proving", "assistant", "point-free"]
description = "A pragmatic point-free theorem prover assistant"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/advancedresearch/poi.git"
homepage = "https://github.com/advancedresearch/poi"

[dependencies]
piston_meta = "1.0.0"
