[package]
name = "poi"
version = "0.23.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
edition = "2018"
keywords = ["advancedresearch", "theorem", "proving", "assistant", "point-free"]
description = "A pragmatic point-free theorem prover assistant"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/advancedresearch/poi.git"
homepage = "https://github.com/advancedresearch/poi"
exclude = ["source/*"]

[dependencies]
piston_meta = "2.0.0"

[dev-dependencies]
read_token = "1.0.0"
levenshtein = "1.0.4"
